# Modern-CMake-for-Cpp-2E

./: .dockerignore  Dockerfile
examples/ap02/01-presets/cmake/: BuildInfo.cmake  buildinfo.h.in
examples/ap02/01-presets/src/calc/: CMakeLists.txt
examples/ap02/01-presets/src/calc_console/: bootstrap.cpp
examples/ap02/01-presets/test/calc/: basic_test.cpp
examples/ch08/02-odr-success/: one.cpp  shared.h
examples/ch08/07-testing/: test.cpp
examples/ch09/03-find-package-custom/cmake/module/: FindPQXX.cmake
examples/ch11/01-no-framework/: CMakeLists.txt
examples/ch11/02-structured/: CMakeLists.txt
examples/ch11/03-catch2/: CMakeLists.txt
examples/ch11/04-gtest/: CMakeLists.txt
examples/ch11/05-gmock/: CMakeLists.txt
examples/ch11/06-coverage/: CMakeLists.txt
examples/ch14/02-install-targets/src/: CMakeLists.txt
examples/ch14/03-install-targets-legacy/: CMakeLists.txt
examples/ch14/03-install-targets-legacy/src/: CMakeLists.txt
examples/ch14/07-install-export/src/: CMakeLists.txt
examples/ch14/08-install-export-legacy/: CMakeLists.txt
examples/ch14/08-install-export-legacy/src/: CMakeLists.txt
examples/ch15/01-full-project/: CMakeLists.txt
examples/ch15/01-full-project/cmake/: Coverage.cmake  CppCheck.cmake  Testing.cmake
examples/ch15/01-full-project/src/: CMakeLists.txt
examples/ch15/01-full-project/src/calc/: CMakeLists.txt  basic.cpp
examples/ch15/01-full-project/src/calc/include/calc/: basic.h
examples/ch15/01-full-project/src/calc_console/: CMakeLists.txt  tui.cpp
examples/ch15/01-full-project/test/calc/: CMakeLists.txt  calc_test.cpp
examples/ch16/01-presets/: CHANGELOG  CMakeLists.txt  INSTALL
examples/ch16/01-presets/cmake/: Packaging.cmake  Testing.cmake
examples/ch16/01-presets/src/calc/: basic.cpp
examples/ch16/01-presets/src/calc/include/calc/: basic.h
examples/ch16/01-presets/test/calc/: CMakeLists.txt
examples/ch16/01-presets/test/calc_console/: CMakeLists.txt
